maybe fix #5375 -- name in filename tabs is cutoff; can't reproduce so don't know, but I did rewrite it more sensibly. Also used the same close x for project tabs.

--- a/src/smc-webapp/_projects.sass
+++ b/src/smc-webapp/_projects.sass
@@ -15,11 +15,6 @@
   padding       : 5px
   +file-tabs-base
 
-.smc-file-tabs-files-desktop > li > a
-  padding       : 11px 5px
-  +file-tabs-base
-  +disable-user-select
-
 // MobileProjectPage
 
 .smc-file-tabs-fixed-mobile > li > a
